--- a/src/components/Toolbar/Toolbar.css
+++ b/src/components/Toolbar/Toolbar.css
@@ -17,7 +17,7 @@
   display: inline-block;
   padding: 10px 14px;
   margin: 0;
-  background: #1f7a8c;
+  background: rgb(72, 129, 166) !important;
   color: #fff;
   border: none;
   border-radius: 4px;
